feat: add group list and create endpoints
